Clarify verify configuration in stunnel template
Added comments to clarify the verify configuration levels.

--- a/stunnel5-https-proxy.conf.template
+++ b/stunnel5-https-proxy.conf.template
@@ -13,4 +13,10 @@ cert = {{CERT}}
 key  = {{KEY}}
 
 ; 浏览器端不需要客户端证书
-verify = 0
+; level 0 - request and ignore peer certificate
+; level 1 - verify peer certificate if present
+; level 2 - verify peer certificate
+; level 3 - verify peer with locally installed certificate
+; level 4 - ignore CA chain and only verify peer certificate
+; default - no verify
+; verify = 0
